--- a/my-portfolio-app/src/components/Projects.module.css
+++ b/my-portfolio-app/src/components/Projects.module.css
@@ -18,34 +18,69 @@
 .projectsBox{
     display: flex;
     flex-direction: row;
-    background-color: red;
     justify-content: space-around;
+    
+
 }
+
+/*projets 1et2*/
 .project{
-    background-color: blue;
     margin: 10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 350px;
-    box-shadow: 8px 5px 5px rgb(173, 171, 171);    
     border-radius: 5px;
+    position: relative;
+    height: auto;
+ 
+}
+.overlay{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(164, 139, 139, 0.641);
+    transition: 0.5s ease;
+    height: 0;
+    width: 100%;
+    border-radius: 5px;
+    overflow: hidden;
+
+}
+
+.overlay p{
+    color: #2d2e32;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    
 }
 .project img{
    width: 350px;
    height: 500px;
    border-radius: 5px;
+   margin: 0;
+   padding: 0;
 }
 
+.project:hover .overlay{
+    height: 100%;
+    }
+    
 
+
+
+/*projet 3*/
 .project3{
-    background-color: blue;
-    margin: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 600px;
     border-radius: 5px;
+    position: relative;
+    height: auto;
 }
 .project3 img{
    width: 600px;
@@ -54,3 +89,19 @@
    box-shadow: 8px 5px 5px rgb(173, 171, 171);    
 
 }
+
+    .project3 p{
+        position: absolute;
+        bottom: 0px;
+        background : black;
+        color: white;
+        transition: 0.5s linear;
+        opacity: 0;
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        width: 100%;
+    }
+    .project3:hover p{
+    opacity: 1;
+    }
