--- a/my-portfolio-app/src/components/Projects.module.css
+++ b/my-portfolio-app/src/components/Projects.module.css
@@ -19,7 +19,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    
 
 }
 
@@ -29,79 +28,143 @@
     display: flex;
     flex-direction: column;
     width: 350px;
-    border-radius: 5px;
+    border-radius: 15px;
     position: relative;
     height: auto;
+
  
 }
 .overlay{
-    position: absolute;
+    position: absolute;   box-shadow: 8px 5px 5px rgb(141, 138, 138);    
+
     bottom: 0;
-    left: 0;
+    left: 60;
     right: 0;
-    background-color: rgba(164, 139, 139, 0.641);
-    transition: 0.5s ease;
+background: rgba(255, 255, 255, 0.2);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
+border: 1px solid rgba(255, 255, 255, 0.3);    transition: 0.3s ease;
     height: 0;
     width: 100%;
-    border-radius: 5px;
+    border-radius: 10px;
     overflow: hidden;
-
 }
 
-.overlay p{
-    color: #2d2e32;
+.overlayText  h2 p{
     position: absolute;
+    align-items: center;
+    font-weight: 500;
+    font-size: 1.2rem;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
-    
+}
+.overlayText a{
+    text-decoration: none;
+}
+
+.overlayText h2{
+    text-align: center;
+    height: 100%;
+    font-size: 1.5rem;
+}
+.overlayText p{
+    position: absolute;
+    height: 100%;
+    padding-top : 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 1.1rem;
+    color: black;
 }
 .project img{
    width: 350px;
-   height: 500px;
-   border-radius: 5px;
+   height: 100%;
+   border-radius: 15px;
    margin: 0;
    padding: 0;
+   box-shadow: 8px 5px 5px rgb(141, 138, 138);    
+
 }
 
 .project:hover .overlay{
     height: 100%;
-    }
-    
+    border-radius: 15px;
+
+   }
+
+   .overlayText span{
+    background: #2d2e32;
+    color: white;
+    border-radius: 10px;
+    padding: 5px;
+   }
 
 
 
 /*projet 3*/
 .project3{
+    margin: 10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 600px;
-    border-radius: 5px;
+    width: auto;
+    border-radius: 10px;
     position: relative;
     height: auto;
+    background-color: green;
 }
-.project3 img{
-   width: 600px;
-   height: 500px;
-   border-radius: 5px;
-   box-shadow: 8px 5px 5px rgb(173, 171, 171);    
-
-}
-
-    .project3 p{
+    .overlayP3{
         position: absolute;
-        bottom: 0px;
-        background : black;
-        color: white;
-        transition: 0.5s linear;
-        opacity: 0;
-        margin: 0;
-        padding: 0;
-        height: 100%;
+        bottom: 0;
+        left: 60;
+        right: 0;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);    transition: 0.3s ease;
+        height: 0;
         width: 100%;
+        border-radius: 10px;
+        overflow: hidden;
+    
     }
-    .project3:hover p{
-    opacity: 1;
+
+.project3 img{
+   width: 700px;
+   height: 100%;
+   border-radius: 10px;
+   box-shadow: 8px 5px 5px rgb(141, 138, 138);    
+
+}
+
+
+.overlayP3 p{
+    position: absolute;
+    height: 100%;
+    padding-top : 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 1.1rem;
+    color: black;
+}
+.overlayP3 h2 p{
+    position: absolute;
+    align-items: center;
+    font-weight: 500;
+    font-size: 1.2rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+}
+.project3:hover .overlayP3{
+    height: 100%;
     }
+ 
+    
+   
