--- a/my-portfolio-app/src/components/HomePage.module.css
+++ b/my-portfolio-app/src/components/HomePage.module.css
@@ -4,31 +4,24 @@
   @import url('https://fonts.googleapis.com/css2?family=Mulish&family=Poppins&display=swap');
 *{
     font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+
 }
 body{
-
-justify-content: space-around;
-background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-background-size: 400% 400%;
-animation: gradient 8s ease infinite;
-height: 100vh;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #D5FFD4;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='100%25' gradientTransform='rotate(240)'%3E%3Cstop offset='0' stop-color='%23D5FFD4'/%3E%3Cstop offset='1' stop-color='%2315AE73'/%3E%3C/linearGradient%3E%3Cpattern patternUnits='userSpaceOnUse' id='b' width='540' height='450' x='0' y='0' viewBox='0 0 1080 900'%3E%3Cg fill-opacity='0.1'%3E%3Cpolygon fill='%23444' points='90 150 0 300 180 300'/%3E%3Cpolygon points='90 150 180 0 0 0'/%3E%3Cpolygon fill='%23AAA' points='270 150 360 0 180 0'/%3E%3Cpolygon fill='%23DDD' points='450 150 360 300 540 300'/%3E%3Cpolygon fill='%23999' points='450 150 540 0 360 0'/%3E%3Cpolygon points='630 150 540 300 720 300'/%3E%3Cpolygon fill='%23DDD' points='630 150 720 0 540 0'/%3E%3Cpolygon fill='%23444' points='810 150 720 300 900 300'/%3E%3Cpolygon fill='%23FFF' points='810 150 900 0 720 0'/%3E%3Cpolygon fill='%23DDD' points='990 150 900 300 1080 300'/%3E%3Cpolygon fill='%23444' points='990 150 1080 0 900 0'/%3E%3Cpolygon fill='%23DDD' points='90 450 0 600 180 600'/%3E%3Cpolygon points='90 450 180 300 0 300'/%3E%3Cpolygon fill='%23666' points='270 450 180 600 360 600'/%3E%3Cpolygon fill='%23AAA' points='270 450 360 300 180 300'/%3E%3Cpolygon fill='%23DDD' points='450 450 360 600 540 600'/%3E%3Cpolygon fill='%23999' points='450 450 540 300 360 300'/%3E%3Cpolygon fill='%23999' points='630 450 540 600 720 600'/%3E%3Cpolygon fill='%23FFF' points='630 450 720 300 540 300'/%3E%3Cpolygon points='810 450 720 600 900 600'/%3E%3Cpolygon fill='%23DDD' points='810 450 900 300 720 300'/%3E%3Cpolygon fill='%23AAA' points='990 450 900 600 1080 600'/%3E%3Cpolygon fill='%23444' points='990 450 1080 300 900 300'/%3E%3Cpolygon fill='%23222' points='90 750 0 900 180 900'/%3E%3Cpolygon points='270 750 180 900 360 900'/%3E%3Cpolygon fill='%23DDD' points='270 750 360 600 180 600'/%3E%3Cpolygon points='450 750 540 600 360 600'/%3E%3Cpolygon points='630 750 540 900 720 900'/%3E%3Cpolygon fill='%23444' points='630 750 720 600 540 600'/%3E%3Cpolygon fill='%23AAA' points='810 750 720 900 900 900'/%3E%3Cpolygon fill='%23666' points='810 750 900 600 720 600'/%3E%3Cpolygon fill='%23999' points='990 750 900 900 1080 900'/%3E%3Cpolygon fill='%23999' points='180 0 90 150 270 150'/%3E%3Cpolygon fill='%23444' points='360 0 270 150 450 150'/%3E%3Cpolygon fill='%23FFF' points='540 0 450 150 630 150'/%3E%3Cpolygon points='900 0 810 150 990 150'/%3E%3Cpolygon fill='%23222' points='0 300 -90 450 90 450'/%3E%3Cpolygon fill='%23FFF' points='0 300 90 150 -90 150'/%3E%3Cpolygon fill='%23FFF' points='180 300 90 450 270 450'/%3E%3Cpolygon fill='%23666' points='180 300 270 150 90 150'/%3E%3Cpolygon fill='%23222' points='360 300 270 450 450 450'/%3E%3Cpolygon fill='%23FFF' points='360 300 450 150 270 150'/%3E%3Cpolygon fill='%23444' points='540 300 450 450 630 450'/%3E%3Cpolygon fill='%23222' points='540 300 630 150 450 150'/%3E%3Cpolygon fill='%23AAA' points='720 300 630 450 810 450'/%3E%3Cpolygon fill='%23666' points='720 300 810 150 630 150'/%3E%3Cpolygon fill='%23FFF' points='900 300 810 450 990 450'/%3E%3Cpolygon fill='%23999' points='900 300 990 150 810 150'/%3E%3Cpolygon points='0 600 -90 750 90 750'/%3E%3Cpolygon fill='%23666' points='0 600 90 450 -90 450'/%3E%3Cpolygon fill='%23AAA' points='180 600 90 750 270 750'/%3E%3Cpolygon fill='%23444' points='180 600 270 450 90 450'/%3E%3Cpolygon fill='%23444' points='360 600 270 750 450 750'/%3E%3Cpolygon fill='%23999' points='360 600 450 450 270 450'/%3E%3Cpolygon fill='%23666' points='540 600 630 450 450 450'/%3E%3Cpolygon fill='%23222' points='720 600 630 750 810 750'/%3E%3Cpolygon fill='%23FFF' points='900 600 810 750 990 750'/%3E%3Cpolygon fill='%23222' points='900 600 990 450 810 450'/%3E%3Cpolygon fill='%23DDD' points='0 900 90 750 -90 750'/%3E%3Cpolygon fill='%23444' points='180 900 270 750 90 750'/%3E%3Cpolygon fill='%23FFF' points='360 900 450 750 270 750'/%3E%3Cpolygon fill='%23AAA' points='540 900 630 750 450 750'/%3E%3Cpolygon fill='%23FFF' points='720 900 810 750 630 750'/%3E%3Cpolygon fill='%23222' points='900 900 990 750 810 750'/%3E%3Cpolygon fill='%23222' points='1080 300 990 450 1170 450'/%3E%3Cpolygon fill='%23FFF' points='1080 300 1170 150 990 150'/%3E%3Cpolygon points='1080 600 990 750 1170 750'/%3E%3Cpolygon fill='%23666' points='1080 600 1170 450 990 450'/%3E%3Cpolygon fill='%23DDD' points='1080 900 1170 750 990 750'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect x='0' y='0' fill='url(%23b)' width='100%25' height='100%25'/%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
+  
 }
 
-@keyframes gradient {
-0% {
-background-position: 0% 50%;
-}
-50% {
-background-position: 100% 50%;
-}
-100% {
-background-position: 0% 50%;
-}
-
-
-}
-/*Navbar*/
 .header{
     display: flex;
     justify-content: space-around;
@@ -37,172 +30,5 @@ background-position: 0% 50%;
     right : 0;
     
 }
-.navbar{
-    background-color: white;
-    color: #2d2e32;;
-     display: flex;
-    flex-direction: row;
-justify-content: flex-end;
-text-decoration: none;
-list-style-type: none;
-    width: 100vw;
-    height: 80px;
-    align-items: center;
-    margin: 0;
-    box-shadow: 8px 5px 5px rgb(173, 171, 171);    
-}
-.navbar a{
-    color: #2d2e32;
-    background-color: transparent;
-    text-decoration: none;
-    padding-left: 20px;
-    padding-right: 20px;
-    font-weight: 900;
 
-
-
-}
-/*Logo*/
-.logo{
-    width: 170px;
-    height: 80px;
-    position: absolute;
-    left: 0;
-    top : 0;
-    z-index: 0;
-
-}
-/*picture*/
-.picture{
-
-    width: 400px;
-    border-radius: 50% 40% 50%;
-    position: relative;
    
-    }
-
-    /*About*/
-.about{
- display: flex;
- flex-direction: column;
- justify-content: center;
- align-items: center;
- position: relative;
- width: 70vw;
- 
- margin-top: 100px;
- margin-bottom: 200px;
- color: #2d2e32;
- height: 500px;
-}
-.aboutBlock{
-display: flex;
-flex-direction: row;
-}
-    .title{
-    display: flex;
-    flex-direction: column;
-    max-width: 50rem;
-    position: relative;
-
-    }
-    .title h1{
-        font-size: 55px;
-        line-height: 1.2;
-        margin-bottom: 2rem;
-        font-weight: 900;
-        font-size: 2.9em;
-        margin-block-start: 0.67em;
-        margin-block-end: 0.67em;
-        margin-inline-start: 0px;
-        margin-inline-end: 0px;
-        font-weight: bold;
-    }
-
-    .title h2{
-        font-size: 1.2rem;
-        color:#767676;
-        font-weight: 500;
-        line-height: 1.4;
-        font-family: 'Mulish', sans-serif;
-    }
-
- 
-   
-
-
-    .logoLinkedin{
-        width: 30px;
-        height: 30px;
-        padding-right: 10px;
-        
-    }
-    .logoLinkedin:hover{
-        cursor: pointer;
-    }
-    .logoGithub{
-        width: 30px;;
-        height: 30px;
-    }
-
-    .logoContainer{
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        width: 100px;
-    }
-
-    .logoContainer:hover{
-        cursor: pointer;
-    }
-    .skills{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        text-decoration: none;
-        list-style-type: none;
-        text-decoration: none;
-        padding-top: 50px;
-
-    }
-    .skills p {
-        font-size: 1.2rem;
-        font-weight: 600;
-    }
-.skills ul{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: auto;
-}
-    .skills ul li{
-   
-        justify-content: center;
-        list-style-type: none;
-        font-size: 1.1rem;
-        margin-left: 8px;
-        margin-right: 8px;
-       padding: 10px;
-        background-color: #F5E0B7;
-        border-radius : 10px;
-      box-shadow: 8px 5px 5px rgb(173, 171, 171);    
-
-        
-    }
-    /*About*/
-    .aboutContainer img{
-        width: 500px;
-        
-    }
-    .aboutContainer{
-        display: flex;
-        flex-direction: row ;
-        justify-content: space-between;
-        align-items: center;
-        width: 70vw;
-    }
-    .aboutText{
-        margin:20px;
-        font-size: 1.2rem;
-    }
