--- a/my-portfolio-app/src/components/Projects.module.css
+++ b/my-portfolio-app/src/components/Projects.module.css
@@ -9,6 +9,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    scroll-snap-align: start;
+
 }
 
 .projectsContainer h3{
