--- a/my-portfolio-app/src/components/Navbar.module.css
+++ b/my-portfolio-app/src/components/Navbar.module.css
@@ -40,10 +40,15 @@ list-style-type: none;
 
 /*Logo*/
 .logo{
-    width:15%;
+    width:30vh;
     height: 100%;
     padding-left: 20px;
     position: relative;
 
 
+}
+@media screen and (max-width : 700px) {
+    .navbar a{
+display: none;
+    }
 }
