--- a/my-portfolio-app/src/components/Presentation.module.css
+++ b/my-portfolio-app/src/components/Presentation.module.css
@@ -2,7 +2,7 @@
 .picture{
 
     position: relative;
-    width:100%;
+    width:30vh;
     height: 100%;
    
     }
@@ -60,9 +60,8 @@
     .title{
         display: flex;
         flex-direction: column;
-        max-width: 50rem;
         position: relative;
-        z-index: 4;
+        ;
     
         }
         .title h1{
@@ -124,20 +123,23 @@
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            padding-top: 50px;
+            padding-top: 10px;
             margin-top : 40px;
-        
-        }
+            width: 100vw;
+            height: auto;
+            position: relative;
+                    }
 
         .skills p{
             font-size: 1.4rem;
             font-weight: 600;
             margin-bottom: 30px;
+       
         }
         .hardSkills ul {
             display: flex;
             flex-direction: row;
-            width: 60vh;
+          width: auto;
             justify-content: space-around;
             text-decoration: none;
             list-style-type: none;
@@ -175,5 +177,31 @@
         margin: 10px;
         border-radius: 50px;
     }
-           /*   Presentation */
-   
+       @media screen and (max-width :700px) {
+        .aboutBlock{
+            display: flex;
+            flex-direction: column;
+            padding-top: 100px;
+        }
+
+        .hardSkills ul{
+            display: flex;
+            flex-direction: column;
+        }
+        .softSkills ul{
+            display: flex;
+            flex-direction: column;
+            width: auto;
+        }
+
+        .skills{
+            display: flex;
+            flex-direction: column;
+            width: auto;
+            justify-content: space-between;
+        }
+    .presentation{
+        height: auto;
+        margin-bottom: 100px;
+
+    }      }
