--- a/my-portfolio-app/src/components/Projects.module.css
+++ b/my-portfolio-app/src/components/Projects.module.css
@@ -4,11 +4,11 @@
 }
 .projectsContainer{
     width: 90vw;
-    height: 800px;
-    margin-top : 200px;
+    height: 100vh;
+    margin-top : 100px;
+    padding-top: 200px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     scroll-snap-align: start;
 
 }
@@ -37,13 +37,13 @@
  
 }
 .overlay{
-    position: absolute;   box-shadow: 8px 5px 5px rgb(141, 138, 138);    
-
+    position: absolute;   
+    box-shadow: 8px 5px 5px rgb(141, 138, 138);    
     bottom: 0;
     left: 60;
     right: 0;
 background: rgba(255, 255, 255, 0.2);
-border-radius: 16px;
+border-radius: 10px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(5px);
 -webkit-backdrop-filter: blur(5px);
@@ -63,6 +63,8 @@ border: 1px solid rgba(255, 255, 255, 0.3);    transition: 0.3s ease;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
+   
+
 }
 .overlayText a{
     text-decoration: none;
@@ -76,7 +78,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);    transition: 0.3s ease;
 .overlayText p{
     position: absolute;
     height: 100%;
-    padding-top : 10px;
+    padding-top : 50px;
     padding-left: 10px;
     padding-right: 10px;
     font-size: 1.1rem;
@@ -88,7 +90,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);    transition: 0.3s ease;
    border-radius: 15px;
    margin: 0;
    padding: 0;
-   box-shadow: 8px 5px 5px rgb(141, 138, 138);    
+   box-shadow: 8px 5px 5px rgb(72, 67, 67);    
 
 }
 
@@ -116,7 +118,6 @@ border: 1px solid rgba(255, 255, 255, 0.3);    transition: 0.3s ease;
     border-radius: 10px;
     position: relative;
     height: auto;
-    background-color: green;
 }
     .overlayP3{
         position: absolute;
@@ -124,11 +125,11 @@ border: 1px solid rgba(255, 255, 255, 0.3);    transition: 0.3s ease;
         left: 60;
         right: 0;
     background: rgba(255, 255, 255, 0.2);
-    border-radius: 16px;
+    border-radius: 10px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.3);    transition: 0.3s ease;
+    border: 1px solid rgba(49, 46, 46, 0.3);    transition: 0.3s ease;
         height: 0;
         width: 100%;
         border-radius: 10px;
@@ -140,7 +141,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);    transition: 0.3s ease;
    width: 700px;
    height: 100%;
    border-radius: 10px;
-   box-shadow: 8px 5px 5px rgb(141, 138, 138);    
+   box-shadow: 8px 5px 5px rgb(48, 47, 47);    
 
 }
 
@@ -148,7 +149,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);    transition: 0.3s ease;
 .overlayP3 p{
     position: absolute;
     height: 100%;
-    padding-top : 10px;
+    padding-top : 50px;
     padding-left: 10px;
     padding-right: 10px;
     font-size: 1.1rem;
@@ -169,4 +170,22 @@ border: 1px solid rgba(255, 255, 255, 0.3);    transition: 0.3s ease;
     }
  
     
-   
+   @media screen and (max-width : 700px) {
+    .projectsContainer{
+        width: 100vw;
+padding-top: 100px;
+    }
+
+    .projectsBox{
+        display: flex;
+        flex-direction: column;
+    }
+    .project3 img{
+        width: 90vw;
+        height: 30vh;
+        border-radius: 10px;
+        box-shadow: 8px 5px 5px rgb(48, 47, 47);    
+     
+     }
+     
+   }
