--- a/my-portfolio-app/src/components/About.module.css
+++ b/my-portfolio-app/src/components/About.module.css
@@ -17,6 +17,9 @@ scroll-snap-align: start;
 .aboutText p{
     font-size: 1.5rem;
 }
+.aboutText span{
+    font-weight: 600;
+}
 .aboutText h3{
     font-size: 2rem;
     padding-bottom: 20px;
@@ -35,9 +38,13 @@ scroll-snap-align: start;
         width: 100vw;
         padding-left: 10px;
         padding-right: 10px;
-        padding-top: 50px;
+        padding-top: 100px;
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .aboutText p{
+        font-size: 1.2rem;
     }
 }
