--- a/my-portfolio-app/src/components/Projects.module.css
+++ b/my-portfolio-app/src/components/Projects.module.css
@@ -9,22 +9,28 @@
     padding-top: 200px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     scroll-snap-align: start;
 
 }
 
 .projectsContainer h3{
-    font-size:  1.4rem;
+    font-size:  2rem;
 }
 
 .projectsBox{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-
+justify-content: center;
+padding-top: 20px;
 }
 
 /*projets 1et2*/
+
+.projects1and2{
+    display: flex;
+    flex-direction: row;
+}
 .project{
     margin: 10px;
     display: flex;
@@ -105,6 +111,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);    transition: 0.3s ease;
     color: white;
     border-radius: 10px;
     padding: 5px;
+    cursor: pointer;
    }
 
 
@@ -169,17 +176,56 @@ border: 1px solid rgba(255, 255, 255, 0.3);    transition: 0.3s ease;
     height: 100%;
     }
  
+
+
+
     
    @media screen and (max-width : 700px) {
     .projectsContainer{
-        width: 100vw;
-padding-top: 100px;
-    }
+padding-top: 80px;
+width: 100vw;
 
+    }
+.project{
+    width:70%;
+
+}
     .projectsBox{
         display: flex;
         flex-direction: column;
     }
+
+    .project img{
+        width:100%;
+        height: 90%;
+        padding: 0;
+        
+    }
+    .project:hover .overlay{
+        height: 90%;
+        border-radius: 15px;
+        width: 100%;
+
+       } 
+      
+
+    .overlay{
+        position: absolute;   
+        box-shadow: 8px 5px 5px rgb(141, 138, 138);    
+        bottom: 0;
+        left: 0;
+        right: 0;
+  top: 0;
+        height: 0;
+        width: 100%;
+        height: 0;
+     
+    }
+    .overlay .overlayText p{
+        padding-top: 0;
+        font-size: 10px;
+        margin: 10px;
+     }
     .project3 img{
         width: 90vw;
         height: 30vh;
@@ -187,5 +233,30 @@ padding-top: 100px;
         box-shadow: 8px 5px 5px rgb(48, 47, 47);    
      
      }
+     .project3:hover .overlayP3{
+        height: 30vh;
+        width: 90vw;
+        }
+        .overlayP3{
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+     .overlayP3 .overlayText p{
+        padding-top: 0;
+        font-size: 10px;
+        margin: 10px;
      
-   }
+        
+     }
+     .projects1and2{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        width: 100vw;
+        height: 50vh;
+     }
+  
+
+       }
